--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@remotion/cli": "4.0.419",
     "@remotion/tailwind-v4": "4.0.419",
     "@remotion/zod-types": "4.0.419",
+    "canvas-confetti": "^1.9.4",
+    "framer-motion": "^12.34.0",
     "jszip": "^3.10.1",
+    "lottie-react": "^2.4.1",
     "node-epub": "^1.0.0-beta.5",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-spring": "^10.0.3",
     "remotion": "4.0.419",
     "tailwindcss": "4.0.0",
     "xml2js": "^0.6.2",
@@ -20,6 +24,7 @@
   },
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.419",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/jszip": "^3.4.0",
     "@types/react": "19.2.7",
     "@types/web": "0.0.166",
