--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
-    "@remotion/cli": "4.0.419",
-    "@remotion/tailwind-v4": "4.0.419",
-    "@remotion/zod-types": "4.0.419",
+    "@remotion/cli": "^4.0.421",
+    "@remotion/media": "^4.0.421",
+    "@remotion/tailwind-v4": "^4.0.421",
+    "@remotion/zod-types": "^4.0.421",
     "canvas-confetti": "^1.9.4",
     "framer-motion": "^12.34.0",
     "jszip": "^3.10.1",
@@ -17,13 +18,13 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-spring": "^10.0.3",
-    "remotion": "4.0.419",
+    "remotion": "^4.0.421",
     "tailwindcss": "4.0.0",
     "xml2js": "^0.6.2",
     "zod": "3.22.3"
   },
   "devDependencies": {
-    "@remotion/eslint-config-flat": "4.0.419",
+    "@remotion/eslint-config-flat": "^4.0.421",
     "@types/canvas-confetti": "^1.9.0",
     "@types/jszip": "^3.4.0",
     "@types/react": "19.2.7",
@@ -41,7 +42,7 @@
     "lint": "eslint src && tsc",
     "audio:status": "echo '=== Audio Files Status ===' && ls -lh public/assets/audio/*/*.mp3 2>/dev/null | tail -10 || echo 'No MP3 files found. See scripts/AUDIO_README.md'",
     "audio:guide": "cat scripts/AUDIO_README.md",
-    "figures:status": "echo '=== Historical Figures Status ===' && ls -lh public/assets/figures/*.jpg 2>/dev/null | tail -5 || echo 'No figure photos found. Run npm run figures:guide for download instructions.'",
+    "figures:status": "echo '=== Historical Figures Status ===' && ls -lh public/assets/figures/*.jpg 2>/dev/null | tail -5 || echo 'No figure photos found. Run bun run figures:guide for download instructions.'",
     "figures:guide": "node scripts/downloadFiguresGuide.js"
   },
   "sideEffects": [
